# Advent_of_Code_2024_HS

./: .gitignore  README.md  aoc.cabal  shell.nix
app/: Day_01.hs  Day_02.hs  Day_03.hs  Day_04.hs  Day_05.hs  Day_06.hs  Day_07.hs  Day_08.hs  Day_09.hs  Day_10.hs  Day_11.hs  Day_12.hs  Day_14.hs  Day_15.hs  Day_23.hs  Day_24.hs  Main.hs
app/Util/: Field.hs  Field2.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
