cabal-version:      3.0
name:               aoc
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             ruuis
maintainer:         luiskret@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                      , MissingH ^>= 1.6.0.1
                      , split ^>=0.2.4
                      , containers ^>=0.7
                      , vector ^>=0.13.1.0
                      , mtl ^>=2.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
